chore: update packages chore: update github action fix: body overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  overflow: hidden;
+}
+
 #root {
   min-height: 100vh;
 }
